# cyrs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: chalk.rs  db.rs  logger.rs  main.rs
