[package]
name = "cyrs"
version = "0.3.0"
authors = ["ycycwx <yytcjcy@gmail.com>"]
edition = "2021"
license = "MIT"
description = """
A simple C-c C-v tool in command line.
"""
documentation = "https://github.com/ycycwx/cyrs"
homepage = "https://github.com/ycycwx/cyrs"
repository = "https://github.com/ycycwx/cyrs"

[[bin]]
name = "cy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.17", features = ["deprecated"] }
env_logger = "0.10.1"
fs_extra = "1.3.0"
log = { version = "0.4.20", features = ["std", "serde"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
