[package]
name = "cyrs"
version = "0.3.2"
authors = ["ycycwx <yytcjcy@gmail.com>"]
edition = "2021"
license = "MIT"
description = """
A simple C-c C-v tool in command line.
"""
documentation = "https://github.com/ycycwx/cyrs"
homepage = "https://github.com/ycycwx/cyrs"
repository = "https://github.com/ycycwx/cyrs"

[[bin]]
name = "cy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["deprecated"] }
env_logger = "0.11.0"
fs_extra = "1.3.0"
log = { version = "0.4.21", features = ["std", "serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
